Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-18879

[Subdoc] Internal memcached error (0x84) on invalid json

    XMLWordPrintable

Details

    • Untriaged
    • Unknown

    Description

      I was expecting a SUBDOC::DOC_NOTJSON error code but instead received internal error from memcached. Flags for the string document in this case was 0x2 which I guess might have caused it.

      Attached the trace

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            subhashni Subhashni Balakrishnan (Inactive)
            subhashni Subhashni Balakrishnan (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty