MB-18879: Return correct mcbp error for subjson DOC_NOTJSON

The subjson 'DOC_NOTJSON' error was not handled in
subdoc_operate_one_path when converting from subjson to memcached
errors, meaning that the generic 'EINTERNAL' error was returned
instead.

Add this case to the conversion table.

Change-Id: I48060a117441eca2c49240433da322d5d85c7fdf
Reviewed-on: http://review.couchbase.org/62153
Reviewed-by: Trond Norbye <trond.norbye@gmail.com>
Tested-by: buildbot <build@couchbase.com>